--- a/package.json
+++ b/package.json
@@ -2,16 +2,22 @@
   "name": "tribeFrontend",
   "version": "0.0.0",
   "dependencies": {},
+  "config": {
+    "unsafe-perm": true
+  },
   "scripts": {
-    "test": "gulp test"
+    "test": "gulp test",
+    "postinstall": "bower install --allow-root"
   },
   "devDependencies": {
     "estraverse": "~4.1.0",
+    "bower": "~1.3.9",
     "gulp": "~3.9.0",
     "gulp-autoprefixer": "~3.0.2",
     "gulp-angular-templatecache": "~1.8.0",
     "del": "~2.0.2",
     "lodash": "~3.10.1",
+    "gulp-connect": "~4.0.0",
     "gulp-concat": "~2.6.0",
     "gulp-cssnano": "~2.1.1",
     "gulp-filter": "~3.0.1",
@@ -30,24 +36,11 @@
     "gulp-rev-replace": "~0.4.2",
     "gulp-htmlmin": "~1.3.0",
     "gulp-inject": "~3.0.0",
-    "gulp-protractor": "~2.1.0",
     "gulp-sourcemaps": "~1.6.0",
     "gulp-ruby-sass": "~0.7.1",
     "gulp-angular-filesort": "~1.1.1",
     "main-bower-files": "~2.9.0",
     "wiredep": "~2.2.2",
-    "karma": "~0.13.10",
-    "karma-jasmine": "~0.3.6",
-    "karma-phantomjs-launcher": "~0.2.1",
-    "phantomjs": "~1.9.18",
-    "karma-angular-filesort": "~1.0.0",
-    "karma-phantomjs-shim": "~1.2.0",
-    "karma-coverage": "~0.5.2",
-    "karma-ng-html2js-preprocessor": "~0.2.0",
-    "browser-sync": "~2.9.11",
-    "browser-sync-spa": "~1.0.3",
-    "http-proxy-middleware": "~0.9.0",
-    "chalk": "~1.1.1",
     "uglify-save-license": "~0.4.1",
     "wrench": "~1.5.8"
   },
